--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: iKnowledge
 pygments: true
 encoding: UTF-8
 permalink: /:year-:month-:day/:title.html
+markdown: redcarpet
 include: ['.nojekyll']
 exclude: ['LICENSE', 'README.md']
 destination: redraiment.github.io
