--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:year-:month-:day/:title.html
 markdown: redcarpet
 include: ['.nojekyll']
 exclude: ['LICENSE', 'README.md']
-destination: redraiment.github.io
+destination: zzp-me.github.io
 blog:
   name: 子清行
   motto: 黑夜中孤守一轮明月|喧闹中独享一份清闲
