每一篇文章独立一个目录，方便资源（图片等）管理

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: iKnowledge
 pygments: true
 encoding: UTF-8
-permalink: /:year-:month-:day/:title.html
+permalink: /:year-:month-:day/:title/
 markdown: redcarpet
 include: ['.nojekyll']
 exclude: ['LICENSE', 'README.md']
