把资源文件独立出来，这样能避免多个仓库里有重复冗余的文件

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ pygments: true
 encoding: UTF-8
 permalink: /:year-:month-:day/:title/
 markdown: redcarpet
-include: ['.nojekyll']
+include: ['.nojekyll', '.gitignore']
 exclude: ['LICENSE', 'README.md']
 destination: zzp-me.github.io
