剔除zzp.me专用的设置，仅保留干净的通用设置

--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,10 +1,7 @@
-name: 子清行
-motto: 黑夜中孤守一轮明月|喧闹中独享一份清闲
-url: zzp.me
+name: 博客名
+motto: 座右铭
+url: 个人域名
 author:
-  id: redraiment
-  name: 张泽鹏
-  email: redraiment@gmail.com
-comment:
-  id: 1776428432
-  appcode: 1192214979
+  id: 网名
+  name: 真实姓名
+  email: 电子邮件
