适应新版分类：将name改成id

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,6 +1,6 @@
-- name: iKnowledge
+- id: iKnowledge
   children:
-    - name: 第一版
-    - name: 第二版
+    - id: 第一版
+    - id: 第二版
 
-- name: 友情链接
+- id: 友情链接
